<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="str">Happy Birthday</string>
    <string name="from">WYB\'s wife</string>
    <string name="HELLO">Hello</string>
    <string name="btn_label">button</string>
    <string name="hint_txt">input your name</string>
    <string name="teamName">teamName</string>
    <string name="Score">score</string>
    <string name="label_add1">+1point</string>
    <string name="label_add2">+2points</string>
    <string name="label_add3">+3points</string>
    <string name="Btn">BUTTON</string>
    <string name="BTNN">RESET</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">InputRMB</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="rmb_hint_label">input RMB</string>
    <string name="key">input the key words</string>
    <string name="save">save</string>
</resources>
